--- a/meta.yml
+++ b/meta.yml
@@ -6,7 +6,7 @@ beta: false
 teacher_info: 'Los ejercicios 7 y 8 están basados en un mismo contexto, por lo que
   hay una serie de datos del código extra que están repetidos en ambos. Si querés
   modificar alguno de ellos, asegurate de también modificarlo en el otro :sweat_smile:'
-language: javascript
+language: python
 id_format: "%05d"
 order:
 - 1
