--- a/00011_Un ejercicio sin precedentes/expectations.yml
+++ b/00011_Un ejercicio sin precedentes/expectations.yml
@@ -1,6 +1,6 @@
 ---
 expectations:
-- binding: puedeJubilarse
+- binding: puede_jubilarse
   inspection: HasBinding
 - binding: "*"
   inspection: Except:DoesTypeTest
